fix: avoid timeleft flickering

--- a/src/components/Home/EventBanner.scss
+++ b/src/components/Home/EventBanner.scss
@@ -15,6 +15,7 @@
   }
   .timeLeft {
     color: #ffffff;
+    min-width: 71px;
   }
 }
 @media screen and (min-width: 1440px) {
@@ -29,6 +30,9 @@
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
+    }
+    .timeLeft {
+      min-width: 67px;
     }
   }
 }
